--- a/img/index.html
+++ b/img/index.html
@@ -98,8 +98,10 @@
         <!-- /Team Section -->
     </main>
     <footer>
+        <!-- Footer Section-->
         <a href="#">WEB<span>STUDIO</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <!-- /Footer Section-->
     </footer>
 </body>
 
