--- a/index.html
+++ b/index.html
@@ -11,58 +11,98 @@
 <body>
     <header>
         <nav>
-            <a href="">WEBSTUDIO</a>
+            <a href="#">WEB<span>STUDIO</span></a>
             <ul>
                 <li><a href="#">Studio</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel+110001111111">+11 (000) 111-11-11</a>
         </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel+110001111111">+11 (000) 111-11-11</a>
     </header>
-    <!-- Main Section -->
-    <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Older Service</button>
-    </section>
-    <!-- /Main Section -->
+    <main>
+        <!-- Main Section -->
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Older Service</button>
+        </section>
+        <!-- /Main Section -->
 
-    <!-- Skills Section-->
-    <section>
-        <ul>
-            <li>
-                <p>Strategy</p>
-                <p>Our goal is to identify the business
-                    problem to walk away with the perfect and creative solution.</p>
-            </li>
-            <li>
-                <p>Punctuality</p>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
-                </p>
-            </li>
-            <li>
-                <p>Diligence</p>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                    risk.</p>
-            </li>
-            <li>
-                <p>Technologies</p>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                </p>
-            </li>
-        </ul>
-    </section>
-    <!-- /Skills Section-->
+        <!-- Skills Section-->
+        <section>
+            <ul>
+                <li>
+                    <p>Strategy</p>
+                    <p>Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li>
+                    <p>Punctuality</p>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.
+                    </p>
+                </li>
+                <li>
+                    <p>Diligence</p>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.</p>
+                </li>
+                <li>
+                    <p>Technologies</p>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <!-- /Skills Section-->
 
-    <!-- What are we doing Section-->
-    <h2>What are we doing</h2>
-    <ul>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-    </ul>
-    <!-- /What are we doing Section-->
+        <!-- What are we doing Section-->
+        <section>
+            <h2>What are we doing</h2>
+            <ul>
+                <li><img src="/img/img 1 (1)-min.jpg" alt="image-1" width="360" height="300"></li>
+                <li><img src="/img/img 2 (1)-min.jpg" alt="image-2" width="360" height="300"></li>
+                <li><img src="/img/img 3-min.jpg" alt="image-3" width="360" height="300"></li>
+            </ul>
+        </section>
+        <!-- /What are we doing Section-->
+
+        <!-- Team Section -->
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="/img/team-1.jpg" alt="team-1" width="264" height="260">
+                    <p>Mark Guerrero</p>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="/img/team-2.jpg" alt="team-2" width="264" height="260">
+                    <p>Tom Ford</p>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="/img/team-3.jpg" alt="team-3" width="264" height="260">
+                    <p>Camila Garcia</p>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="/img/team-4.jpg" alt="team-4" width="264" height="260">
+                    <p>Daniel Wilson</p>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+        <!-- /Team Section -->
+    </main>
+    <footer>
+        <!-- Footer Section-->
+        <a href="#">WEB<span>STUDIO</span></a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <!-- /Footer Section-->
+    </footer>
 </body>
 
 </html>
