--- a/index.html
+++ b/index.html
@@ -11,49 +11,48 @@
 <body>
     <header>
         <nav>
-            <a href="#">WEB<span>STUDIO</span></a>
+            <a href="./index.html">WEBSTUDIO</a>
             <ul>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel+110001111111">+11 (000) 111-11-11</a>
+
+        <ul>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        </ul>
+
     </header>
 
     <main>
         <!-- Main Section -->
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Older Service</button>
+            <button type="button">Order Service</button>
         </section>
         <!-- /Main Section -->
 
         <!-- Skills Section-->
         <section>
+            <h2 hidden>Skills</h2>
             <ul>
                 <li>
-                    <p>Strategy</p>
-                    <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <p>Punctuality</p>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.
-                    </p>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <p>Diligence</p>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.</p>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <p>Technologies</p>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
-                    </p>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -63,9 +62,9 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="/img/img 1 (1)-min.jpg" alt="image-1" width="360" height="300"></li>
-                <li><img src="/img/img 2 (1)-min.jpg" alt="image-2" width="360" height="300"></li>
-                <li><img src="/img/img 3-min.jpg" alt="image-3" width="360" height="300"></li>
+                <li><img src="/images/work-1.jpg" alt="image-1" width="360" height="300"></li>
+                <li><img src="/images/work-2.jpg" alt="image-2" width="360" height="300"></li>
+                <li><img src="/images/work-3.jpg" alt="image-3" width="360" height="300"></li>
             </ul>
         </section>
         <!-- /What are we doing Section-->
@@ -75,23 +74,23 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/img/team-1.jpg" alt="team-1" width="264" height="260">
-                    <p>Mark Guerrero</p>
+                    <img src="/images/team-1.jpg" alt="team-1" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/img/team-2.jpg" alt="team-2" width="264" height="260">
-                    <p>Tom Ford</p>
+                    <img src="/images/team-2.jpg" alt="team-2" width="264" height="260">
+                    <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/img/team-3.jpg" alt="team-3" width="264" height="260">
-                    <p>Camila Garcia</p>
+                    <img src="/images/team-3.jpg" alt="team-3" width="264" height="260">
+                    <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/img/team-4.jpg" alt="team-4" width="264" height="260">
-                    <p>Daniel Wilson</p>
+                    <img src="/images/team-4.jpg" alt="team-4" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -100,7 +99,7 @@
     </main>
 
     <footer>
-        <a href="#">WEB<span>STUDIO</span></a>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
