--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="/index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -20,7 +20,7 @@
         </nav>
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
@@ -62,9 +62,9 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="./images/work-1.jpg" alt="image-1" width="360" height="300"></li>
-                <li><img src="./images/work-2.jpg" alt="image-2" width="360" height="300"></li>
-                <li><img src="./images/work-3.jpg" alt="image-3" width="360" height="300"></li>
+                <li><img src="/images/work-1.jpg" alt="image-1" width="360"></li>
+                <li><img src="/images/work-2.jpg" alt="image-2" width="360"></li>
+                <li><img src="/images/work-3.jpg" alt="image-3" width="360"></li>
             </ul>
         </section>
         <!-- /What are we doing Section-->
@@ -74,22 +74,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/team-1.jpg" alt="team-1" width="264" height="260">
+                    <img src="/images/team-1.jpg" alt="team-1" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team-2.jpg" alt="team-2" width="264" height="260">
+                    <img src="/images/team-2.jpg" alt="team-2" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team-3.jpg" alt="team-3" width="264" height="260">
+                    <img src="/images/team-3.jpg" alt="team-3" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team-4.jpg" alt="team-4" width="264" height="260">
+                    <img src="/images/team-4.jpg" alt="team-4" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -99,7 +99,7 @@
     </main>
 
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="/index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
